mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_invalid_op.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_invalid_op.mux`
error: Binary operator '+' is not supported for types string and int
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_invalid_op.mux:2:18
   |
 2 | auto a = "str" + 1
   |                  ^
